--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.1",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.24.3"
   }
 }
